--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "express": "^4.13.3",
     "express-session": "1.12.1",
     "mongoose": "4.3.1",
+    "morgan": "1.6.1",
     "passport": "0.3.2",
     "passport-facebook": "2.0.0",
     "passport-twitter": "1.0.3",
     "redis": "2.4.2",
     "socket.io": "^1.4.5",
-    "socket.io-redis": "1.0.0"
+    "socket.io-redis": "1.0.0",
+    "winston": "2.1.1"
   }
 }
